--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^7.6.0",
+    "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
@@ -42,6 +43,7 @@
     "mongoose": "^6.0.12",
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
-    "nanoid": "^3.1.30"
+    "nanoid": "^3.1.30",
+    "query-string": "^7.0.1"
   }
 }
